# dependabot-reviews

./: .gitignore  README.md  dependabot_reviews.py  pyproject.toml
dependabot_reviews/: __main__.py  dependabot_reviews.py
src/dependabot_reviews/: __init__.py  __main__.py  gh_cli_caller.py  main.py
